Add User API endpoints
